# LearnMate-AI-

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  main.py  pyproject.toml
backend/src/: database.py  dependencies.py  models.py  schemas.py
backend/src/application/service/exam/: exam_extraction_service.py  generate_mock_exam.py
backend/src/application/service/question/: suggest_answer.py
backend/src/domain/model/exam/: exam.py
backend/src/infrastructure/persistence/models/: exam.py
backend/src/infrastructure/persistence/repositories/: exam_repository.py
learnmate-frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
learnmate-frontend/src/: index.html
learnmate-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  subject.service.ts
learnmate-frontend/src/app/interfaces/: batch-exam-response.ts  exam.ts  resource.ts  subject.interface.ts
learnmate-frontend/src/app/subject-create/: subject-create.component.html  subject-create.component.spec.ts  subject-create.component.ts
learnmate-frontend/src/app/subject-edit/: subject-edit.component.html  subject-edit.component.ts
learnmate-frontend/src/app/subject-exams/: subject-exams.component.html  subject-exams.component.spec.ts  subject-exams.component.ts
learnmate-frontend/src/app/subject-list/: subject-list.component.html  subject-list.component.ts
learnmate-frontend/src/app/subject-mock-exam/: subject-mock-exam.component.css  subject-mock-exam.component.html  subject-mock-exam.component.spec.ts  (+1 more)
(+3 files in other folders)
