[tool.poetry]
name = "learnmate-backend"
version = "0.1.0"
description = "Backend for LearnMate AI"
authors = ["Jaime Mulero <jmulero@lunia.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
python-dotenv = "1.0.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
openai = "^1.52.2"
python-multipart = "0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
